--- a/public/static/index.html
+++ b/public/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="db"> <!--ng-app assigns this view to an angular module, which,in this case,is defined in app.js-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,9 +20,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-    <!--section>
-        <div class="jumbotron">
+<body>    
+    <section>
+        <!--div class="jumbotron">
             <h1>Presentation</h1>
             <p>Loquélæ. Brevis oratio. Hodie particeps tua perdideris. Quid sui nominis - Emilio? Emilio gradiens ad 
                 carcerem. Tulitque omnem pecuniam tuam in DEA tuus Lab. Vos got nihil. Quadratum unum. Et ego agnosco 
@@ -31,17 +31,28 @@
                 per plastic. Erit autem dissolvere metalli petram, vitrum, tellus. Ita quod illic '. Quam de aliquo 
                 cum aliqua interdum, maybe? Aliquid viride, huh? Quam vos sunt etiam vivere?
             </p>
-        </div>
-    </section-->
+        </div-->
+    </section>
     <section>
         <h1>Projects</h1>
-        <div class="container">
+        <div class="container" ng-controller="ProjectController as projCtrl">
             <div class="row">
-                <div class="col-xs-6 col-md-4 col-lg-3">
+                <div class="col-xs-6 col-md-4 col-lg-3" ng-repeat='project in projCtrl.projects'>
                     <a href="#" class="thumbnail">
                         <div class="img-wrapper">
-                            <div class="content" id="proj1"></div>
-                            <!--<img src="images/proj1.png">-->
+                            <div class="content" id="{{project.id}}">
+                                <!--<p>This is project {{0+1}}</p>-->
+                                <h2>{{project.shortTitle}}</h2>
+                                <h3>{{project.shortDesc}}</h3>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!--<div class="col-xs-6 col-md-4 col-lg-3">
+                    <a href="#" class="thumbnail">
+                        <div class="img-wrapper">
+                            <div class="content" id="proj1">
+                            </div>
                         </div>
                     </a>
                 </div>
@@ -49,7 +60,6 @@
                     <a href="#" class="thumbnail">
                         <div class="img-wrapper">
                             <div class="content" id="proj2"></div>
-                            <!--<img src="images/proj2.png">-->
                         </div>
                     </a>
                 </div>
@@ -57,7 +67,6 @@
                     <a href="#" class="thumbnail">
                         <div class="img-wrapper">
                             <div class="content" id="proj3"></div>
-                            <!--<img src="images/proj3.png">-->
                         </div>
                     </a>
                 </div>
@@ -65,7 +74,6 @@
                     <a href="#" class="thumbnail">
                         <div class="img-wrapper">
                             <div class="content" id="proj4"></div>
-                            <!--<img src="images/proj4.png">-->
                         </div>
                     </a>
                 </div>
@@ -73,7 +81,6 @@
                     <a href="#" class="thumbnail">
                         <div class="img-wrapper">
                             <div class="content" id="proj5"></div>
-                            <!--<img src="images/proj5.png">-->
                         </div>
                     </a>
                 </div>
@@ -81,7 +88,6 @@
                     <a href="#" class="thumbnail">
                         <div class="img-wrapper">
                             <div class="content" id="proj6"></div>
-                            <!--<img src="images/proj6.png">-->
                         </div>
                     </a>
                 </div>
@@ -89,23 +95,10 @@
                     <a href="#" class="thumbnail">
                         <div class="img-wrapper">
                             <div class="content" id="proj7"></div>
-                            <!--<img src="images/proj7.png">-->
                         </div>
                     </a>
-                </div>
-                <!--<div class="col-xs-6 col-md-4 col-lg-3">
-                    <a href="#" class="thumbnail">proj8</a>
-                </div>
-                <div class="col-xs-6 col-md-4 col-lg-3">
-                    <a href="#" class="thumbnail">proj9</a>
-                </div>
-                <div class="col-xs-6 col-md-4 col-lg-3">
-                    <a href="#" class="thumbnail">proj10</a>
-                </div>
-                <div class="col-xs-6 col-md-4 col-lg-3">
-                    <a href="#" class="thumbnail">proj11</a>-->
-                </div>
-            </div>
+                </div>-->
+            </div> <!-- end .row -->
         </div>
     </section>
     <footer>
@@ -113,9 +106,12 @@
             &copy LuisaGonçalves
         </div>
     </footer>
-
+    
     <!-- Angular -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <!--script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script-->
+    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>-->
+    <script src="../../js/angular.min.js"></script>
+    <script src="../../app.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
