--- a/public/static/index.html
+++ b/public/static/index.html
@@ -34,26 +34,34 @@
         </div-->
     </section>
     <section>
-        <h1>Projects</h1>
-        <div class="container" ng-controller="ProjectController">
-            <div class="row">
-                <div class="col-xs-6 col-md-4 col-lg-3" ng-repeat='project in projects'>
-                    <a href="#" class="thumbnail">
-                        <div class="img-wrapper">
-                            <div class="content" id="{{project.name}}">
-                                <!--<p>This is project {{0+1}}</p>-->
-                                <h2>{{project.title}}</h2>
-                                <h3>{{project.city}}</h3>
+        <div ng-controller="ProjectController">
+            <h1>Projects 
+                <!--<button style="font-size:10px" class="glyphicon glyphicon-refresh" ng-click="reset()"></button>-->
+                <button type="button" class="btn btn-default btn-circle" ng-click="reset()">
+                    <i class="glyphicon glyphicon-refresh"></i>
+                </button>
+            </h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-6 col-md-4 col-lg-3" ng-repeat='project in projects'>
+                        <a href="#" class="thumbnail">
+                            <div class="img-wrapper">
+                                <div class="content" id="{{project.name}}">
+                                    <h5>{{project.title}}</h5>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
-            </div> <!-- end .row -->
+                        </a>
+                    </div>
+                </div> <!-- end .row -->
+            </div>
         </div>
     </section>
     <footer>
         <div class="jumbotron">
             &copy LuisaGonçalves
+            <!--<div ng-controller="ResetDBController">-->
+                <!--<span class="glyphicon glyphicon-refresh" ng-click="reset()"></span>-->
+            <!--</div>-->
         </div>
     </footer>
     
@@ -63,6 +71,7 @@
     <!--<script src="../../js/angular.min.js"></script>-->
     <script src="app.js"></script>
     <script src="projCtrl.js"></script>
+    <script src="resetDBCtrl.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
