back to URLs with #

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/"/>
+    <!--<base href="/"/>-->
     <title>LuGo</title>
 
     <!--<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">-->
@@ -32,12 +32,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="home">Luísa Gonçalves</a>
+                <a class="navbar-brand" href="/#/home">Luísa Gonçalves</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="home">Portfolio</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="contacts">Contacts</a></li>
+                <li class="active"><a href="/#/home">Portfolio</a></li>
+                <li><a href="/#/about">About</a></li>
+                <li><a href="/#/contacts">Contacts</a></li>
             </ul>
         </div>
     </nav>
@@ -55,7 +55,7 @@
     <!-- Angular resources -->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>-->
-    <script src="angular/angular.min.js"></script>
+    <script src="angular/angular.js"></script>
     <script src="angular/angular.min.js.map"></script>
     <script src="angular/angular-route.js"></script>
     
