Navbar adjustment for extra-small viewports

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -45,6 +45,10 @@
                         <li><a href="/#/home" title="Home">Portfolio</a></li>
                         <li><a href="/#/about" title="About">About</a></li>
                         <li><a href="/#/contacts" title="Contacts">Contacts</a></li>
+                        <!--Making menu collapse after click (requires changes in the body padding-top : -->
+                        <!--<li><a href="/#/home" title="Home" data-toggle="collapse" data-target="#collapsable-nav">Portfolio</a></li>
+                        <li><a href="/#/about" title="About" data-toggle="collapse" data-target="#collapsable-nav">About</a></li>
+                        <li><a href="/#/contacts" title="Contacts" data-toggle="collapse" data-target="#collapsable-nav">Contacts</a></li>-->
                     </ul>
                 </div>
             </div>
