--- a/public/static/index.html
+++ b/public/static/index.html
@@ -28,7 +28,7 @@
     <i class="glyphicon glyphicon-refresh"></i>
 </button>-->
 
-    <header role="banner">
+    <!--<header role="banner">-->
         <nav id="header-nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -40,11 +40,11 @@
                     </button>
                     <a class="navbar-brand" href="/#/home" title="Home"><h1>Luísa Gonçalves</h1></a>
                 </div>
-                <div>
+                <div id="nav-main">
                     <ul id="collapsable-nav" class="nav navbar-nav navbar-right collapse navbar-collapse">
-                        <li><a href="/#/home" title="Home">Portfolio</a></li>
-                        <li><a href="/#/about" title="About">About</a></li>
-                        <li><a href="/#/contacts" title="Contacts">Contacts</a></li>
+                        <li><a href="/#/home" title="Home" data-toggle="collapse" data-target=".in">Portfolio</a></li>
+                        <li><a href="/#/about" title="About" data-toggle="collapse" data-target=".in">About</a></li>
+                        <li><a href="/#/contacts" title="Contacts" data-toggle="collapse" data-target=".in">Contacts</a></li>
                         <!--Making menu collapse after click (requires changes in the body padding-top : -->
                         <!--<li><a href="/#/home" title="Home" data-toggle="collapse" data-target="#collapsable-nav">Portfolio</a></li>
                         <li><a href="/#/about" title="About" data-toggle="collapse" data-target="#collapsable-nav">About</a></li>
@@ -53,9 +53,9 @@
                 </div>
             </div>
         </nav>
-    </header>
+    <!--</header>-->
 
-    <main id="content" role="main">
+    <main id="content" role="main"">
         <div ng-view></div> 
     </main>
     
@@ -86,6 +86,6 @@
     <!--<script src="controllers/resetDBCtrl.js"></script>-->
     <script src="controllers/projectCtrl.js"></script>
     <script src="controllers/contactsCtrl.js"></script>
-    
+
 </body>
 </html>
